--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
     <div class="container">
         <h1 class="header">🚀 Farmland & Flower - الابتكار الزراعي</h1>
 
+        <nav>
+            <h2>🔗 تنقل بين المستودعات</h2>
+            <ul>
+                <li><a href="../../index.html">🏠 المستودع الرئيسي</a></li>
+                <li><a href="../index.html">⬆️ العودة إلى المستوى الأعلى</a></li>
+                <li><a href="index.html">📂 المستودع الحالي</a></li>
+                <li><a href="../Neighbor_Repo/index.html">🔗 المستودع المجاور</a></li>
+            </ul>
+        </nav>
+
         <div class="section">
             <h2>💡 الحدائق الذكية والزراعة المستدامة</h2>
             <p>✅ دمج الذكاء الاصطناعي في تطوير الحلول الزراعية الذكية.</p>
