إضافة صفحة التحديثات إلى STEAM_Nexus_Switchers_Lab مع أيقونات التنقل

--- a/updates.html
+++ b/updates.html
@@ -1,6 +1,15 @@
 <html>
   <head><title>التحديثات - STEAM_Nexus_Switchers_Lab</title></head>
   <body>
-  <h1>🔄 تحسينات الذكاء الاصطناعي</h1><p>تحديثات على نظام تصنيف الصور والتعلم العميق.</p>
-  <a href='index.html'>🔙 العودة إلى الصفحة الرئيسية</a>
+  <h1>🔄 تحديثات STEAM_Nexus_Switchers_Lab</h1><p>تحسينات على الأنظمة الذكية للمعالجة والتصنيف.</p>
+  
+  <hr>
+  <h2>🔗 التنقل بين المستودعات</h2>
+  <ul>
+    <li><a href='../index.html'>🏠 الصفحة الرئيسية</a></li>
+    <li><a href='../STEAM_Nexus_Switchers_Lab/updates.html'>🌀 Switchers Lab</a></li>
+    <li><a href='../STEAM_Nexus_Switchers_Lab/STEAM-Forge/updates.html'>🔧 Forge</a></li>
+    <li><a href='../STEAM_Nexus_Switchers_Lab/STEAM-Forge/STEAM_Data_Manager/updates.html'>📂 Data Manager</a></li>
+    <li><a href='../my-online-store/updates.html'>🛒 متجر إلكتروني</a></li>
+  </ul>
   </body></html>
