مزامنة التحديثات داخل Switchers Lab

--- a/index.html
+++ b/index.html
@@ -1,36 +1,51 @@
-<html>
-<head><title>الرئيسية - STEAM_Nexus_Switchers_Lab</title></head>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>🚀 STEAM Nexus Switchers Lab</title>
+    <style>
+        body { font-family: 'Questrial', sans-serif; background: linear-gradient(90deg, #2c2c2c, #5a3e2b, #8a6e51); color: #ffffff; text-align: center; }
+        .container { max-width: 1200px; margin: auto; padding: 20px; background: rgba(44, 44, 44, 0.9); border-radius: 10px; box-shadow: 0 0 15px rgba(255, 255, 255, 0.2); }
+        h1 { text-shadow: 2px 2px 5px #8a6e51; }
+        .section { padding: 20px; border-radius: 10px; background: rgba(90, 62, 43, 0.8); margin-bottom: 30px; }
+        .nav-links { list-style: none; padding: 0; display: flex; justify-content: center; flex-wrap: wrap; }
+        .nav-links li { margin: 10px; }
+        .nav-links a { text-decoration: none; color: #ffffff; font-weight: bold; padding: 10px 15px; background: #34495e; border-radius: 5px; transition: 0.3s; }
+        .nav-links a:hover { background: #2c3e50; }
+    </style>
+</head>
 <body>
-<header>
-  <h1>مرحبًا بك في STEAM_Nexus_Switchers_Lab</h1>
-</header>
 
-<section>
-  <h2>🆕 التحديثات الأخيرة</h2>
-  <html>
-  <head><title>التحديثات - STEAM_Nexus_Switchers_Lab</title></head>
-  <body>
-  <h1>🔄 تحديثات STEAM_Nexus_Switchers_Lab</h1><p>تحسينات على الأنظمة الذكية للمعالجة والتصنيف.</p>
-  
-  <hr>
-  <h2>🔗 التنقل بين المستودعات</h2>
-  <ul>
-    <li><a href='../index.html'>🏠 الصفحة الرئيسية</a></li>
-    <li><a href='STEAM_Nexus_Switchers_Lab/updates.html'>🌀 Switchers Lab</a></li>
-    <li><a href='STEAM_Nexus_Switchers_Lab/STEAM-Forge/updates.html'>🔧 Forge</a></li>
-    <li><a href='STEAM_Nexus_Switchers_Lab/STEAM-Forge/STEAM_Data_Manager/updates.html'>📂 Data Manager</a></li>
-    <li><a href='my-online-store/updates.html'>🛒 متجر إلكتروني</a></li>
-  </ul>
-  </body></html>
-</section>
+<div class="container">
+    <h1>⚙️ STEAM Nexus Switchers Lab</h1>
 
-<hr>
-<h2>🔗 التنقل بين المستودعات</h2>
-<ul>
-  <li><a href='../index.html'>🏠 الصفحة الرئيسية</a></li>
-  <li><a href='../STEAM_Nexus_Switchers_Lab/updates.html'>🌀 Switchers Lab</a></li>
-  <li><a href='../STEAM_Nexus_Switchers_Lab/STEAM-Forge/updates.html'>🔧 Forge</a></li>
-  <li><a href='../STEAM_Nexus_Switchers_Lab/STEAM-Forge/STEAM_Data_Manager/updates.html'>📂 Data Manager</a></li>
-  <li><a href='../my-online-store/updates.html'>🛒 متجر إلكتروني</a></li>
-</ul>
-</body></html>
+    <section>
+        <h2>🔗 التنقل بين المستودعات</h2>
+        <ul class="nav-links">
+            <li><a href="https://ali-khateb-1.github.io/STEAM_Nexus_Hub/">🏠 الصفحة الرئيسية</a></li>
+            <li><a href="https://ali-khateb-1.github.io/STEAM_Nexus_Switchers_Lab/">🌀 Switchers Lab</a></li>
+            <li><a href="https://ali-khateb-1.github.io/STEAM-Forge/">🔧 Forge</a></li>
+            <li><a href="https://ali-khateb-1.github.io/STEAM_Data_Manager/">📂 Data Manager</a></li>
+            <li><a href="https://ali-khateb-1.github.io/my-online-store/">🛒 متجر إلكتروني</a></li>
+        </ul>
+    </section>
+
+    <div class="section">
+        <h2>📞 اتصل بنا</h2>
+        <p>🌍 <a href="https://www.linkedin.com/in/ali-khateeb-steam-ai-data-education-tech">LinkedIn الشخصي</a></p>
+        <p>🌍 <a href="https://www.facebook.com/SpecialistAliKhatib/">صفحتي على Facebook</a></p>
+        <p>📸 <a href="https://www.instagram.com/managing_web_pages/">Instagram - Managing Web Pages</a></p>
+        <p>🎥 <a href="http://www.youtube.com/@Steam-team.direction">قناتي على YouTube</a></p>
+        <p>📧 البريد الإلكتروني: ali_alkhateeb91@hotmail.com</p>
+        <p>📞 الهاتف: +970 568033662</p>
+    </div>
+
+    <div class="section">
+        <h2>🌸 اقتباس يلخص رؤية المشروع</h2>
+        <p class="quote">"نحن لا نزرع الزهور فقط، بل نزرع الأفكار والابتكارات التي ترسم مستقبلًا أكثر ذكاءً واستدامة."</p>
+    </div>
+</div>
+
+</body>
+</html>
