--- a/updates.html
+++ b/updates.html
@@ -1,15 +1,68 @@
-<html>
-  <head><title>التحديثات - STEAM_Nexus_Switchers_Lab</title></head>
-  <body>
-  <h1>🔄 تحديثات STEAM_Nexus_Switchers_Lab</h1><p>تحسينات على الأنظمة الذكية للمعالجة والتصنيف.</p>
-  
-  <hr>
-  <h2>🔗 التنقل بين المستودعات</h2>
-  <ul>
-    <li><a href='../index.html'>🏠 الصفحة الرئيسية</a></li>
-    <li><a href='STEAM_Nexus_Switchers_Lab/updates.html'>🌀 Switchers Lab</a></li>
-    <li><a href='STEAM_Nexus_Switchers_Lab/STEAM-Forge/updates.html'>🔧 Forge</a></li>
-    <li><a href='STEAM_Nexus_Switchers_Lab/STEAM-Forge/STEAM_Data_Manager/updates.html'>📂 Data Manager</a></li>
-    <li><a href='my-online-store/updates.html'>🛒 متجر إلكتروني</a></li>
-  </ul>
-  </body></html>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>التحديثات - STEAM_Nexus_Switchers_Lab</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            color: #333;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #007BFF;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            margin: 10px 0;
+        }
+        ul li a {
+            text-decoration: none;
+            color: #007BFF;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <header>
+        <h1>🔄 تحديثات STEAM_Nexus_Switchers_Lab</h1>
+    </header>
+
+    <section>
+        <h2>🆕 آخر التحديثات</h2>
+        <p>✅ تحسينات على الأنظمة الذكية للمعالجة والتصنيف.</p>
+        <p>✅ تطوير أنظمة تنقل بين المستودعات لتحقيق تجربة مستخدم أكثر سلاسة.</p>
+    </section>
+
+    <hr>
+
+    <section>
+        <h2>🔗 التنقل بين المستودعات</h2>
+        <ul>
+            <li><a href="../index.html">🏠 الصفحة الرئيسية</a></li>
+            <li><a href="STEAM_Nexus_Switchers_Lab/updates.html">🌀 Switchers Lab</a></li>
+            <li><a href="STEAM_Nexus_Switchers_Lab/STEAM-Forge/updates.html">🔧 Forge</a></li>
+            <li><a href="STEAM_Nexus_Switchers_Lab/STEAM-Forge/STEAM_Data_Manager/updates.html">📂 Data Manager</a></li>
+            <li><a href="my-online-store/updates.html">🛒 متجر إلكتروني</a></li>
+        </ul>
+    </section>
+</div>
+
+</body>
+</html>
