UI updates + STEAM-Forge changes

--- a/switchers_lab.html
+++ b/switchers_lab.html
@@ -1,9 +1,88 @@
 <!DOCTYPE html>
-<html>
-<head><title>STEAM Nexus Switchers Lab</title></head>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>🔧 Switchers Lab – أدوات الابتكار</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Cairo', sans-serif;
+      background: linear-gradient(to bottom, #1f1f1f, #3a3a3a);
+      color: #eee;
+    }
+    header {
+      background: #292929;
+      padding: 20px;
+      text-align: center;
+      color: #FF9500;
+      font-size: 1.8em;
+      text-shadow: 0 0 8px #ffb347;
+    }
+    .tools-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      padding: 40px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .tool-card {
+      background: rgba(255,255,255,0.05);
+      border-radius: 12px;
+      padding: 20px;
+      backdrop-filter: blur(8px);
+      border: 1px solid #444;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      transition: transform 0.3s;
+      text-align: center;
+    }
+    .tool-card:hover {
+      transform: translateY(-5px);
+    }
+    .tool-card h3 {
+      color: #FF9500;
+    }
+    .tool-card a {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 6px 12px;
+      background: #FF9500;
+      color: #111;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+    .tool-card a:hover {
+      background: #ffaa33;
+    }
+  </style>
+</head>
 <body>
-<h1>مرحبًا في Switchers Lab</h1>
-<p>مستودع فرعي يحتوي على أدوات البرمجة والتطوير.</p>
-<a href="STEAM-Forge/index.html">اذهب إلى STEAM-Forge</a>
+
+<header>🔧 مختبر Switchers – أدوات STEAM Nexus</header>
+
+<div class="tools-container">
+  <div class="tool-card">
+    <h3>🧪 Matrix Up Effect</h3>
+    <p>تأثير ماتريكس معكوس، أداة تعليمية لتعليم الرسوم البرمجية.</p>
+    <a href="../STEAM_Nexus_Switchers_Lab/index.html" target="_blank">افتح الأداة</a>
+  </div>
+
+  <div class="tool-card">
+    <h3>🔥 STEAM Forge</h3>
+    <p>منصة إنشاء وتشكيل المشاريع التعليمية التفاعلية.</p>
+    <a href="STEAM-Forge/index.html" target="_blank">اذهب إلى Forge</a>
+  </div>
+
+  <div class="tool-card">
+    <h3>💡 تحديات Matrix</h3>
+    <p>واجهة تحديات مصممة لتنمية مهارات التفكير المنطقي والبرمجة.</p>
+    <a href="matrix_challenges.html" target="_blank">ابدأ الآن</a>
+  </div>
+
+  <!-- يمكنك إضافة المزيد من البطاقات هنا -->
+</div>
+
 </body>
 </html>
