--- a/updates.html
+++ b/updates.html
@@ -1,67 +1,99 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>التحديثات - STEAM_Nexus_Switchers_Lab</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            color: #333;
-            text-align: center;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #007BFF;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            margin: 10px 0;
-        }
-        ul li a {
-            text-decoration: none;
-            color: #007BFF;
-            font-weight: bold;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>🔄 تحديثات Switchers Lab | STEAM Nexus</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Cairo', sans-serif;
+      background: linear-gradient(to bottom, #fdfdfd, #eef1f5);
+      color: #333;
+    }
+
+    header {
+      background-color: #292b2c;
+      color: #FF9500;
+      text-align: center;
+      padding: 25px;
+      font-size: 1.8em;
+      text-shadow: 0 0 8px #ffb347;
+    }
+
+    .container {
+      max-width: 960px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+
+    section {
+      margin-bottom: 50px;
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+    }
+
+    h2 {
+      color: #FF9500;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul li {
+      margin: 10px 0;
+    }
+
+    ul li a {
+      text-decoration: none;
+      color: #007BFF;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    ul li a:hover {
+      color: #FF9500;
+    }
+
+    .update {
+      background: #f3f3f3;
+      padding: 12px 18px;
+      border-radius: 8px;
+      margin-bottom: 12px;
+      border-left: 5px solid #FF9500;
+    }
+  </style>
 </head>
 <body>
 
+<header>🔧 لوحة التحديثات والتوجيه | Switchers Lab</header>
+
 <div class="container">
-    <header>
-        <h1>🔄 تحديثات STEAM_Nexus_Switchers_Lab</h1>
-    </header>
 
-    <section>
-        <h2>🆕 آخر التحديثات</h2>
-        <p>✅ تحسينات على الأنظمة الذكية للمعالجة والتصنيف.</p>
-        <p>✅ تطوير أنظمة تنقل بين المستودعات لتحقيق تجربة مستخدم أكثر سلاسة.</p>
-    </section>
+  <section>
+    <h2>🆕 أحدث التطويرات:</h2>
+    <div class="update">✅ دمج واجهات تفاعلية في switchers_lab.html لعرض الأدوات كمركز تجريبي.</div>
+    <div class="update">✅ تم تصميم صفحة Matrix Up كأداة تعليمية مستقلة.</div>
+    <div class="update">📌 تحديثات هيكلية مرتقبة لربط Forge وData Manager ضمن منطق تعليمي موحّد.</div>
+    <div class="update">🚧 جاري تطوير صفحة تحديات Matrix وربطها بـ Switchers.</div>
+  </section>
 
-    <hr>
+  <section>
+    <h2>🧭 روابط المستودعات والأدوات:</h2>
+    <ul>
+      <li><a href="../index.html">🏠 الصفحة الرئيسية لـ STEAM Nexus</a></li>
+      <li><a href="switchers_lab.html">🌀 Switchers Lab – مركز الأدوات</a></li>
+      <li><a href="STEAM-Forge/index.html">🔧 Forge – تشكيل المشاريع</a></li>
+      <li><a href="STEAM-Forge/STEAM_Data_Manager/index.html">📂 Data Manager – إدارة بيانات المشاريع</a></li>
+      <li><a href="../my-online-store/index.html">🛒 المتجر الإلكتروني</a></li>
+    </ul>
+  </section>
 
-    <section>
-        <h2>🔗 التنقل بين المستودعات</h2>
-        <ul>
-            <li><a href="../index.html">🏠 الصفحة الرئيسية</a></li>
-            <li><a href="STEAM_Nexus_Switchers_Lab/updates.html">🌀 Switchers Lab</a></li>
-            <li><a href="STEAM_Nexus_Switchers_Lab/STEAM-Forge/updates.html">🔧 Forge</a></li>
-            <li><a href="STEAM_Nexus_Switchers_Lab/STEAM-Forge/STEAM_Data_Manager/updates.html">📂 Data Manager</a></li>
-            <li><a href="my-online-store/updates.html">🛒 متجر إلكتروني</a></li>
-        </ul>
-    </section>
 </div>
 
 </body>
