--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@
     <h2>🌸 رؤية المشروع</h2>
     <p class="quote">"نحن لا نزرع الزهور فقط، بل نزرع الأفكار والابتكارات التي ترسم مستقبلًا أكثر ذكاءً واستدامة."</p>
   </div>
+
+  <!-- ✨ قسم المشاريع المرتبطة -->
+  <div class="glass-box">
+    <h2>🔗 مشاريع مرتبطة</h2>
+    <a href="https://mabavira.github.io/Civibot/" target="_blank">🌆 Civibot – مشروع الروبوت الحضري من MABAVira</a>
+    <a href="https://paldorai.github.io/urban_tech/" target="_blank">🏙 Urban Tech – منصة PALDORAI للابتكار الحضري</a>
+    <a href="https://solvanix.github.io/Product_Store/fitra_operating_system/" target="_blank">🧠 Fitra.OS – واجهة التشغيل الإدراكي</a>
+  </div>
 </div>
 
 </body>
